# EduPlatform

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
eduplatform/: manage.py  pyproject.toml
eduplatform/courses/: admin.py  endpoints.py  mixins.py  models.py  serializers.py  tests.py  urls.py
eduplatform/courses/migrations/: 0001_add_specialization_model.py  0002_add_course_model.py  0003_add_group_model.py  0004_add_topic_model.py  0005_add_image_model.py  0005_add_test_model.py  0006_add_question_model.py  0006_add_test_model.py  0007_add_answer_model.py  0007_add_question_model.py  0008_add_answer_model.py  0008_add_article_model.py  0009_add_article_model.py  0009_add_completed_test__model.py  0009_add_complited_test__model.py  0010_add_complited_test_model.py  0010_add_image_model.py  0011_alter_group_date_formation.py  0011_answer_created_at_answer_updated_at_and_more.py  0012_alter_group_date_formation.py  0013_alter_group_students.py
eduplatform/eduplatform/: asgi.py  settings.py  urls.py  wsgi.py
eduplatform/users/: admin.py  endpoints.py  forms.py  managers.py  models.py  serializers.py  tokens.py  urls.py  views.py
eduplatform/users/migrations/: 0001_add_customuser_model.py  0002_add_student_model.py  0002_student_teacher.py  0003_add_teacher_model.py  0003_remove_student_name_remove_teacher_name_and_more.py  0004_add_image_model.py  0005_customuser_created_at_customuser_updated_at_and_more.py  0006_customuser_email_is_verified.py  0007_alter_customuser_first_name_and_more.py  (+2 more)
(+6 files in other folders)
